--- a/.github/workflows/gtest-ci.yml
+++ b/.github/workflows/gtest-ci.yml
@@ -4,6 +4,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Build and Run Test Suite
-      - uses: actions/checkout@v3
-      - run: mkdir ${{github.workspace}}/tests/build && cd ${{github.workspace}}/tests/build && cmake .. && cmake --build . && ./Google_Tests_run
+        run: mkdir ${{github.workspace}}/tests/build && cd ${{github.workspace}}/tests/build && cmake .. && cmake --build . && ./Google_Tests_run
